add(features): complete guidePage, complete optionsPage with new repolution and new changeBackground